grammar.js
		document: $ => seq(
			repeat(
				choice(
					$.comment,
					$.import_header,
				),
			),
			choice(
				$.page_header,
				$.taglib_header,
			),
			repeat(
				seq(
					optional($.comment),
					choice(
						$.import_header,
						$.page_header,
						$.taglib_header,
					),
				),
			),
			repeat($._top_level_tag),
		),

		_top_level_tag: $ => choice(
			$._top_level_sp_tag,
			$.comment,
			$.html_doctype,
			// TODO: prec doesn't work here
			prec(3, $.html_void_tag),
			prec(2, $.html_tag),
			prec(1, $.html_option_tag),
			$.java_tag,
			$.script_tag,
			$.style_tag,
			$.xml_comment,
			$.xml_entity,
		),

		page_header: $ => seq(
			$.header_open,
			'page',
			$.language_attribute,
			$.pageEncoding_attribute,
			$.contentType_attribute,
			$.header_close,
		),

		taglib_header: $ => seq(
			$.header_open,
			'taglib',
			choice(
				$.uri_attribute,
				$.tagdir_attribute,
			),
			$.prefix_attribute,
			$.header_close,
		),

		header_open: $ => '<%@',
		header_close: $ => '%>',

		// sp tags

		argument_tag: $ => seq(
			$.argument_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.default_attribute,
					$.expression_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.object_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.argument_tag_close,
				),
			),
		),
		argument_tag_open: $ => '<sp:argument',
		argument_tag_close: $ => '</sp:argument>',

		checkbox_tag: $ => seq(
			$.checkbox_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.checked_attribute,
					$.disabled_attribute,
					$.dynamics_attribute,
					$.format_attribute,
					$.hidden_attribute,
					$.id_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.personalization_attribute,
					$.readonly_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.checkbox_tag_close,
				),
			),
		),
		checkbox_tag_open: $ => '<sp:checkbox',
		code_tag: $ => seq(
			$.code_tag_open,
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.code_tag_close,
				),
			),
		),
		code_tag_open: $ => '<sp:code',
		code_tag_close: $ => '</sp:code>',

		collection_tag: $ => seq(
			$.collection_tag_open,
			repeat(
				choice(
					$.action_attribute,
					$.condition_attribute,
					$.default_attribute,
					$.expression_attribute,
					$.index_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.object_attribute,
					$.publisher_attribute,
					$.query_attribute,
					$.scope_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.collection_tag_close,
				),
			),
		),
		collection_tag_open: $ => '<sp:collection',
		collection_tag_close: $ => '</sp:collection>',

		condition_tag: $ => seq(
			$.condition_tag_open,
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat(
						choice(
							$._top_level_tag,
							$.elseif_tag,
							$.else_tag,
						),
					),
					$.condition_tag_close,
				),
			),
		),
		condition_tag_open: $ => '<sp:condition',
		condition_tag_close: $ => '</sp:condition>',

		diff_tag: $ => seq(
			$.diff_tag_open,
			repeat(
				choice(
					$.from_attribute,
					$.information_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.original_attribute,
					$.revised_attribute,
					$.to_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.diff_tag_close,
				),
			),
		),
		diff_tag_open: $ => '<sp:diff',
		else_tag: $ => seq(
			$.else_tag_open,
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.else_tag_close,
				),
			),
		),
		else_tag_open: $ => '<sp:else',
		else_tag_close: $ => '</sp:else>',

		elseif_tag: $ => seq(
			$.elseif_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.contains_attribute,
					$.eq_attribute,
					$.gt_attribute,
					$.gte_attribute,
					$.ic_attribute,
					$.isNull_attribute,
					$.locale_attribute,
					$.lt_attribute,
					$.lte_attribute,
					$.name_attribute,
					$.neq_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.elseif_tag_close,
				),
			),
		),
		elseif_tag_open: $ => '<sp:elseif',
		elseif_tag_close: $ => '</sp:elseif>',

		error_tag: $ => seq(
			$.error_tag_open,
			repeat($.code_attribute),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.error_tag_close,
				),
			),
		),
		error_tag_open: $ => '<sp:error',
		error_tag_close: $ => '</sp:error>',

		for_tag: $ => seq(
			$.for_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.from_attribute,
					$.index_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.step_attribute,
					$.to_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.for_tag_close,
				),
			),
		),
		for_tag_open: $ => '<sp:for',
		for_tag_close: $ => '</sp:for>',

		form_tag: $ => seq(
			$.form_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.command_attribute,
					$.context_attribute,
					$.handler_attribute,
					$.host_attribute,
					$.id_attribute,
					$.module_attribute,
					$.nameencoding_attribute,
					$.template_attribute,
					$.uri_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.form_tag_close,
				),
			),
		),
		form_tag_open: $ => '<sp:form',
		form_tag_close: $ => '</sp:form>',

		hidden_tag: $ => seq(
			$.hidden_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.dynamics_attribute,
					$.fixvalue_attribute,
					$.format_attribute,
					$.id_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.personalization_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.hidden_tag_close,
				),
			),
		),
		hidden_tag_open: $ => '<sp:hidden',
		if_tag: $ => seq(
			$.if_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.contains_attribute,
					$.eq_attribute,
					$.gt_attribute,
					$.gte_attribute,
					$.ic_attribute,
					$.isNull_attribute,
					$.locale_attribute,
					$.lt_attribute,
					$.lte_attribute,
					$.name_attribute,
					$.neq_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.if_tag_close,
				),
			),
		),
		if_tag_open: $ => '<sp:if',
		if_tag_close: $ => '</sp:if>',

		include_tag: $ => seq(
			$.include_tag_open,
			repeat(
				choice(
					$.anchor_attribute,
					$.arguments_attribute,
					$.context_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.mode_attribute,
					$.module_attribute,
					$.return_attribute,
					$.template_attribute,
					$.uri_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat(
						choice(
							$._top_level_tag,
							$.argument_tag,
						),
					),
					$.include_tag_close,
				),
			),
		),
		include_tag_open: $ => '<sp:include',
		include_tag_close: $ => '</sp:include>',

		print_tag: $ => seq(
			$.print_tag_open,
			repeat(
				choice(
					$.arg_attribute,
					$.condition_attribute,
					$.convert_attribute,
					$.cryptkey_attribute,
					$.dateformat_attribute,
					$.decimalformat_attribute,
					$.decoding_attribute,
					$.decrypt_attribute,
					$.default_attribute,
					$.encoding_attribute,
					$.encrypt_attribute,
					$.expression_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.text_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.print_tag_close,
				),
			),
		),
		print_tag_open: $ => '<sp:print',
		self_closing_tag_end: $ => '/>',

		// spt tags

		dynamic_attribute: $ => seq(
			$.attribute_name,
			optional(
				seq(
					'=',
					$.string,
				),
			),
		),
		attribute_name: $ => /\w+/,

		action_attribute: $ => seq(
			'action',
			'=',
			$.string,
		),

		code_attribute: $ => seq(
			'code',
			'=',
			$.string,
		),

		command_attribute: $ => seq(
			'command',
			'=',
			$.string,
		),

		condition_attribute: $ => seq(
			'condition',
			'=',
			$.condition_string,
		),

		contentType_attribute: $ => seq(
			'contentType',
			'=',
			$.string,
		),

		disabled_attribute: $ => seq(
			'disabled',
			'=',
			$.string,
		),

		eq_attribute: $ => seq(
			'eq',
			'=',
			$.string,
		),

		from_attribute: $ => seq(
			'from',
			'=',
			$.string,
		),

		gt_attribute: $ => seq(
			'gt',
			'=',
			$.string,
		),

		handler_attribute: $ => seq(
			'handler',
			'=',
			$.string,
		),

		id_attribute: $ => seq(
			'id',
			'=',
			$.string,
		),

		index_attribute: $ => seq(
			'index',
			'=',
			$.string,
		),

		language_attribute: $ => seq(
			'language',
			'=',
			$.string,
		),

		locale_attribute: $ => seq(
			'locale',
			'=',
			$.string,
		),

		lookup_attribute: $ => seq(
			'lookup',
			'=',
			$.string,
		),

		lt_attribute: $ => seq(
			'lt',
			'=',
			$.string,
		),

		module_attribute: $ => seq(
			'module',
			'=',
			$.string,
		),

		name_attribute: $ => seq(
			'name',
			'=',
			$.object_string,
		),

		object_attribute: $ => seq(
			'object',
			'=',
			$.object_string,
		),

		original_attribute: $ => seq(
			'original',
			'=',
			$.string,
		),

		pageEncoding_attribute: $ => seq(
			'pageEncoding',
			'=',
			$.string,
		),

		personalization_attribute: $ => seq(
			'personalization',
			'=',
			$.string,
		),

		prefix_attribute: $ => seq(
			'prefix',
			'=',
			$.string,
		),

		publisher_attribute: $ => seq(
			'publisher',
			'=',
			$.string,
		),

		query_attribute: $ => seq(
			'query',
			'=',
			$.string,
		),

		readonly_attribute: $ => seq(
			'readonly',
			'=',
			$.string,
		),

		revised_attribute: $ => seq(
			'revised',
			'=',
			$.string,
		),

		step_attribute: $ => seq(
			'step',
			'=',
			$.string,
		),

		to_attribute: $ => seq(
			'to',
			'=',
			$.string,
		),

		type_attribute: $ => seq(
			'type',
			'=',
			$.string,
		),

		uri_attribute: $ => seq(
			'uri',
			'=',
			$.string,
		),

		value_attribute: $ => seq(
			'value',
			'=',
			$.string,
		),

		string: $ => seq(
			'"',
			repeat(
				choice(
					/[^"$!\}]+/,
					prec(1, $.interpolated_string),
					prec(2, $.interpolated_anchor),
					prec(3, '$'),
					prec(4, '!'),
				),
			),
			'"',
		),

		text: $ => /[^<>&\s]+(?:[^<>&]+[^<>&\s])?/,
