test/corpus/sp_code.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:code>
	text: <sp:print name="text"/>
</sp:code>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (code_tag
    (code_tag_open)
    (text)
    (print_tag
      (print_tag_open)
      (name_attribute
        (string
          (string_content)))
      (self_closing_tag_end))
    (code_tag_close)))
