test/corpus/sp_condition.txt
================================================================================
single if
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:condition>
	<sp:if condition="evalExpression(${_value} + 1) == 3">
		case 1
	</sp:if>
</sp:condition>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (condition_tag
    (condition_tag_open)
    (if_tag
      (if_tag_open)
      (condition_attribute
        (string
          (string_content)))
      (text)
      (if_tag_close))
    (condition_tag_close)))


================================================================================
if-else
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:condition>
	<sp:if name="_value" gt="3">
		case 1
	</sp:if>
	<sp:else>
		case 3
	</sp:else>
</sp:condition>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (condition_tag
    (condition_tag_open)
    (if_tag
      (if_tag_open)
      (name_attribute
        (string
          (string_content)))
      (gt_attribute
        (string
          (string_content)))
      (text)
      (if_tag_close))
    (else_tag
      (else_tag_open)
      (text)
      (else_tag_close))
    (condition_tag_close)))

================================================================================
multiple elseifs
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:condition>
	<sp:if name="_value" gt="3">
		case 1
	</sp:if>
	<sp:elseif name="_value" lt="4">
		case 2
	</sp:elseif>
	<sp:elseif name="_value" eq="4">
		case 3
	</sp:elseif>
	<sp:else>
		case 4
	</sp:else>
</sp:condition>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (condition_tag
    (condition_tag_open)
    (if_tag
      (if_tag_open)
      (name_attribute
        (string
          (string_content)))
      (gt_attribute
        (string
          (string_content)))
      (text)
      (if_tag_close))
    (elseif_tag
      (elseif_tag_open)
      (name_attribute
        (string
          (string_content)))
      (lt_attribute
        (string
          (string_content)))
      (text)
      (elseif_tag_close))
    (elseif_tag
      (elseif_tag_open)
      (name_attribute
        (string
          (string_content)))
      (eq_attribute
        (string
          (string_content)))
      (text)
      (elseif_tag_close))
    (else_tag
      (else_tag_open)
      (text)
      (else_tag_close))
    (condition_tag_close)))
