test/corpus/sp_diff.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:diff name="_result" from="'abc'" to="'abc cde'" revised="_revised" original="_original" lookup="false" locale="en_EN"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (diff_tag
    (diff_tag_open)
    (name_attribute
      (string
        (string_content)))
    (from_attribute
      (string
        (string_content)))
    (to_attribute
      (string
        (string_content)))
    (revised_attribute
      (string
        (string_content)))
    (original_attribute
      (string
        (string_content)))
    (lookup_attribute
      (string
        (string_content)))
    (locale_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
