test/corpus/sp_error.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:error code="LGIN-E011">
	An error has occured.
</sp:error>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (error_tag
    (error_tag_open)
    (code_attribute
      (string
        (string_content)))
    (text)
    (error_tag_close)))
