test/corpus/sp_for.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:for index="_i" from="1" to="3">
	hello, world
</sp:for>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (for_tag
    (for_tag_open)
    (index_attribute
      (string
        (string_content)))
    (from_attribute
      (string
        (string_content)))
    (to_attribute
      (string
        (string_content)))
    (text)
    (for_tag_close)))

================================================================================
complex
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:for index="_i" from="${start}" condition="${_i} >= (${end} + 1)" step="${step}">
	hello, world
</sp:for>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (for_tag
    (for_tag_open)
    (index_attribute
      (string
        (string_content)))
    (from_attribute
      (string
        (string_content)))
    (condition_attribute
      (string
        (string_content)))
    (step_attribute
      (string
        (string_content)))
    (text)
    (for_tag_close)))
