test/corpus/sp_form.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:form command="command" enctype="multipart/form-data" method="post">
</sp:form>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (form_tag
    (form_tag_open)
    (command_attribute
      (string
        (string_content)))
    (dynamic_attribute
      (attribute_name)
      (html_string))
    (dynamic_attribute
      (attribute_name)
      (html_string))
    (form_tag_close)))

================================================================================
custom handler
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:form uri="/mytest/test.spml" handler="com.sitepark.ies.control.jsp.handler.InformationHandler" method="post">
</sp:form>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (form_tag
    (form_tag_open)
    (uri_attribute
      (string
        (string_content)))
    (handler_attribute
      (string
        (string_content)))
    (dynamic_attribute
      (attribute_name)
      (html_string))
    (form_tag_close)))
