test/corpus/sp_hidden.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:hidden name="_car" value="audi" somethingelse="false" type="text"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (hidden_tag
    (hidden_tag_open)
    (name_attribute
      (string
        (string_content)))
    (value_attribute
      (string
        (string_content)))
    (dynamic_attribute
      (attribute_name)
      (html_string
        (string_content)))
    (type_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
