test/corpus/sp_include.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:include module="some.module" uri="/some/uri.spml">
	<sp:argument name="options" object="_options"/>
	<sp:argument name="text">some <sp:print name="_text"/>!</sp:argument>
</sp:include>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (include_tag
    (include_tag_open)
    (module_attribute
      (string
        (string_content)))
    (uri_attribute
      (string
        (string_content)))
    (argument_tag
      (argument_tag_open)
      (name_attribute
        (string
          (string_content)))
      (object_attribute
        (string
          (string_content)))
      (self_closing_tag_end))
    (argument_tag
      (argument_tag_open)
      (name_attribute
        (string
          (string_content)))
      (text)
      (print_tag
        (print_tag_open)
        (name_attribute
          (string
            (string_content)))
        (self_closing_tag_end))
      (text)
      (argument_tag_close))
    (include_tag_close)))

